Better Avro schema reference handling.
fixes: #406

- `AvroReferenceFinder` added to recursively look for Avro schema references.
- `SchemaReader` now returns an ordered list of schema that need to be registered, in the order they need to be registered
- `SchemaChangeSetCalculators` now ignores the version number when seeing if schema have changed (fixing a bug where it always thought the schema had changed, due to different version numbers).
- `SchemaChangeSetCalculators` now marks any schema outside the domain as `IGNORED`
- `SchemaMutators` includes `IGNORED` schemas, so that users can see that common schemas are not registered.